Fix spacing in between elements in recent news

--- a/main.css
+++ b/main.css
@@ -26,7 +26,8 @@ footer,
 section,
 article,
 div,
-p {
+p,
+img {
   box-sizing: border-box;
 }
 
@@ -442,21 +443,23 @@ main {
   padding: 1em;
 }
 
-.snippet {
-  clear: both;
-  margin: 24px 0;
+.recent-news ul {
   display: flex;
   flex-wrap: wrap;
 }
 
+.snippet {
+  clear: both;
+  margin: 8px 0;
+}
+
 .snippet__thumbnail {
   width: 30%;
-  max-height: 150px;
   float: left;
-  margin-right: 1em;
   display: none;
   order: 2;
   padding-top: 1em;
+  padding-right: 1em;
   object-fit: contain;
   object-position: center top;
 }
